# CREWCODE

./: .gitignore  README.md  pyproject.toml
agents/: debugger.py  inspector.py  reviewer.py  test_engineer.py
cli/: main.py
config/: settings.py
orchestrator/: graph.py
tools/: filesystem.py  linter.py  terminal.py  test_runner.py
